Modernize graph-java to Java 26, Gradle 9.7.1, JUnit 5, PriorityQueue Dijkstra, and GitHub Actions workflows